# simplang

./: .gitignore  CMakeLists.txt  README.md  build.sh  debug.sh  specifications.md
docs/: specifications.md
examples/: adder.spl  erroneous.spl  fib.spl  hello_world.spl  loop.spl  type.spl
include/errors/: error.h
include/lexer/: lexer.h  token.h
include/parser/: ast.h  parser.h
include/semantic/: symbol_table.h
src/: ast.c  error.c  f1.txt  lex.l  lex.lex  lex.yy.c  main.c  parser.c  prog
